--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -21,7 +21,7 @@
 
     - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet: 
-        vpc_id: "{{vpout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
