--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -90,3 +90,12 @@
         resource_tags:
            Name: vprofile-privsub2
       register: privsub2_out
+    
+    - name: Internet Gateway Setup 
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: "{{state}}"
+        resource_tags:
+           Name: vprofile-IGW
+        register: igw_out
