--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -91,11 +91,11 @@
            Name: vprofile-privsub2
       register: privsub2_out
     
-    - name: Internet Gateway Setup 
+    - name: create Internet Gateway Setup 
       ec2_vpc_igw:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: "{{state}}"
         resource_tags:
            Name: vprofile-IGW
-        register: igw_out
+      register: igw_out
