--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -100,17 +100,17 @@
            Name: vprofile-IGW
       register: igw_out
 
-    - name: Create Public route table
+    - name: Set up public subnet route table
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        resource_tags:
-           Name: vprofile-PubRT
+        tags:
+           Name: Vprofile-PubRT
       subnets:
-       - "{{pubsub1_out}}"
-       - "{{pubsub2_out}}"
-       - "{{pubsub3_out}}"
+       - "{{pubsub1_out.subnet.id}}"
+       - "{{pubsub2_out.subnet.id}}"
+       - "{{pubsub3_out.subnet.id}}"
       routes:
        - dest: 0.0.0.0/0
-         gateway_id: "{{ igw_out.gateway_id }}"
-      register: public_route_table
+         gateway_id: "{{igw_out.gateway_id}}"
+      register: pubRT_out
