--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -100,7 +100,7 @@
            Name: vprofile-IGW
       register: igw_out
 
-    - name: Set up public subnet route table
+    - name: Set up route table
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
