--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -100,7 +100,7 @@
            Name: vprofile-IGW
       register: igw_out
 
-  #  - name: Setup public subnet route table 
+    - name: Setup public subnet route table 
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -113,7 +113,4 @@
       routes:
        - dest: 0.0.0.0/0
          gateway_id: "{{igw_out.gateway_id}}"
-  #   register: pubRT_out
-
-
-   
+      register: pubRT_out
