--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -16,7 +16,7 @@
         region: "{{region}}"
       register: vprokey_out
 
-    - name: Save private key into file bastion-key.pem
+    - name: Save private key into file loginkey_vpro.pem
       copy:
         content: "{{vprokey_out.key.private_key}}"
         dest: "./loginkey_vpro.pem"
