--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -57,3 +57,11 @@
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out 
       
+    
+    - name: Insert/Update "BastionSGid" in vars/vpc-output_vars 
+      blockinfile:
+          path: vars/vpc-out-put_vars
+          backup: yes
+          block: |
+            BastionSGid: {{BastionSG_out.group_id}}
+            
