--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -67,7 +67,7 @@
             group_id: "{{vproStackSG_out.group_id}}"
 
     - name: Creating Nginx web01
-      amazon.aws.ec2_instance:
+      aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
@@ -88,7 +88,7 @@
       register: web01_out 
 
     - name: Creating Tomcat app01
-      amazon.aws.ec2_instance:
+      aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
@@ -109,7 +109,7 @@
       register: app01_out
 
     - name: Creating Memcache mc01
-      amazon.aws.ec2_instance:
+      aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
@@ -130,7 +130,7 @@
       register: mc01_out
 
     - name: Creating RabbitMQ rmq01
-      amazon.aws.ec2_instance:
+      aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
@@ -151,7 +151,7 @@
       register: rmq01_out
 
     - name: Creating Mysql dbb01
-      amazon.aws.ec2_instance:
+      aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
