--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -71,7 +71,7 @@
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{nginx_ami}}"
+        image_id: "{{nginx_ami}}"
         wait: yes
         wait_timeout: 300
         instance_tags:
