--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -67,11 +67,11 @@
             group_id: "{{vproStackSG_out.group_id}}"
 
     - name: Creating Nginx web01
-      amazon.aws.ec2_instance:
+      ec2:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image_id: "{{nginx_ami}}"
+        image: "{{nginx_ami}}"
         wait: yes
         wait_timeout: 300
         instance_tags:
