--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -68,23 +68,23 @@
 
     - name: Creating Nginx web01
       ec2_instance:
-        key_name: vprokey
-        region: "{{region}}"
-        instance_type: t2.micro
-        image: ami-0568936c8d2b91c4e
-        wait: yes
-        wait_timeout: 300
-        instance_tags:
-          Name: "web01"
-          Project: Vprofile
-          Owner: DevOps Team
-        exact_count: 1
-        count_tag:
-          Name: "web01"
-          Project: Vprofile
-          Owner: DevOps Team
-        group_id: "{{vproStackSG_out.group_id}}"
-        vpc_subnet_id: "{{privsub1id}}"
+              key_name: vprokey
+              region: "{{region}}"
+              instance_type: t2.micro
+              image: "{{nginx_ami}}"
+              wait: yes
+              wait_timeout: 300
+              instance_tags:
+                Name: "web01"
+                Project: Vprofile
+                Owner: DevOps Team
+              exact_count: 1
+              count_tag:
+                Name: "web01"
+                Project: Vprofile
+                Owner: DevOps Team
+              group_id: "{{vproStackSG_out.group_id}}"
+              vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
 
     - name: Creating Tomcat app01
