--- a/test.yml
+++ b/test.yml
@@ -1,21 +1,24 @@
-- name: Create web01 instance
-  amazon.aws.ec2_instance:
-    key_name: vprokey
-    region: "{{ region }}"
-    instance_type: t2.micro
-    image:
-      ami: ami-0568936c8d2b91c4e
-    wait: yes
-    wait_timeout: 300
-    instance_tags:
-      Name: "web01"
-      Project: "Vprofile"
-      Owner: "DevOps Team"
-    count_tag:
-      Name: "web01"
-      Project: "Vprofile"
-      Owner: "DevOps Team"
-    exact_count: 1
-    group_id: "{{ vproStackSG_out.group_id }}"
-    vpc_subnet_id: "{{ privsub1id }}"
-  register: web01_out
+- name: My Playbook
+  hosts: all
+  tasks:
+    - name: Create web01 instance
+      ec2_instance:
+        key_name: vprokey
+        region: "{{ region }}"
+        instance_type: t2.micro
+        image:
+          ami: ami-0568936c8d2b91c4e
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "web01"
+          Project: "Vprofile"
+          Owner: "DevOps Team"
+        count_tag:
+          Name: "web01"
+          Project: "Vprofile"
+          Owner: "DevOps Team"
+        exact_count: 1
+        group_id: "{{ vproStackSG_out.group_id }}"
+        vpc_subnet_id: "{{ privsub1id }}"
+      register: web01_out
