--- a/test.yml
+++ b/test.yml
@@ -109,7 +109,7 @@
       register: app01_out
 
     - name: Creating memcache mc01
-      ec2:
+      amazon.aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
