--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -71,8 +71,7 @@
           key_name: vprokey
           region: "{{region}}"
           instance_type: t2.micro
-          image: 
-            ami: ami-0568936c8d2b91c4e
+          image: "{{nginx_ami}}"
           wait: yes
           wait_timeout: 300
           instance_tags:
