--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -74,15 +74,15 @@
         image_id: "{{nginx_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "web01"
           Project: Vprofile
           Owner: DevOps Team
         exact_count: 1
-        count_tag:
-            Name: "web01"
-            Project: Vprofile
-            Owner: DevOps Team
+        count:
+          Name: "web01"
+          Project: Vprofile
+          Owner: DevOps Team
         group_id: "{{vproStackSG_out.group_id}}"
         vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
