--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -78,10 +78,7 @@
           Name: "web01"
           Project: Vprofile
           Owner: DevOps Team
-        count: 
-          Name: "web01"
-          Project: Vprofile
-          Owner: DevOps Team
+        exact_count: 1
         group_id: "{{vproStackSG_out.group_id}}"
         vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
