--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -79,7 +79,7 @@
           Project: Vprofile
           Owner: DevOps Team
         count: 1
-        group_id: "{{vproStackSG_out.group_id}}"
+        vpc_security_group_ids: "{{vproStackSG_out.group_id}}"
         vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
 
