--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -79,7 +79,6 @@
           Project: Vprofile
           Owner: DevOps Team
         count: 1
-        group_id: "{{vproStackSG_out.group_id}}"
         vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
 
@@ -88,40 +87,30 @@
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{tomcat_ami}}"
+        image_id: "{{tomcat_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "app01"
           Project: Vprofile
-          Owner: DevOps Team 
-        exact_count: 1
-        count_tag:
-          Name: "app01"
-          Project: Vprofile
-          Owner: DevOps Team 
-        group_id: "{{vproStackSG_out.group_id}}"
+          Owner: DevOps Team
+        count: 1
         vpc_subnet_id: "{{privsub1id}}"
-      register: app01_out
+      register: app01_out 
 
     - name: Creating Memcache mc01
       amazon.aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{memcache_ami}}"
+        image_id: "{{memcache_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
-          Name: "mc01"
+        tags:
+          Name: "mc011"
           Project: Vprofile
-          Owner: DevOps Team 
-        exact_count: 1
-        count_tag:
-          Name: "mc01"
-          Project: Vprofile
-          Owner: DevOps Team 
-        group_id: "{{vproStackSG_out.group_id}}"
+          Owner: DevOps Team
+        count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: mc01_out
 
@@ -130,40 +119,30 @@
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{rmq_ami}}"
+        image_id: "{{rmq_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "rmq01"
           Project: Vprofile
-          Owner: DevOps Team 
-        exact_count: 1
-        count_tag:
-          Name: "rmq01"
-          Project: Vprofile
-          Owner: DevOps Team 
-        group_id: "{{vproStackSG_out.group_id}}"
+          Owner: DevOps Team
+        count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: rmq01_out
 
-    - name: Creating Mysql dbb01
+    - name: Creating Mysql db01
       amazon.aws.ec2_instance:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{mysql_ami}}"
+        image_id: "{{mysql_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "db01"
           Project: Vprofile
-          Owner: DevOps Team 
-        exact_count: 1
-        count_tag:
-          Name: "db01"
-          Project: Vprofile
-          Owner: DevOps Team 
-        group_id: "{{vproStackSG_out.group_id}}"
+          Owner: DevOps Team
+        count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: db01_out
 
