--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -147,4 +147,89 @@
       register: db01_out
 
     - debug:
-        var: db01_out 
+        var: db01_out.tagged_instances[0].id
+    
+    - amazon.aws.elb_classic_lb:
+        name: "vprofile-elb"
+        region: "{{region}}"
+        scheme: internal
+        state: present
+        instance_ids:
+          - "{{web01_out.tagged_instances[0].id}}"
+      purge_instance_ids: true
+      security-group_ids: "{{vproELBSG_out.group_id}}"
+      subnets:
+       - "{{pubsub1id}}"
+       - "{{pubsub2id}}"
+       - "{{pubsub3id}}"
+      listeners:
+        - protocol: http # options are http, https, ssl, tcp
+          load_balancer_port: 80
+          instance_port: 80
+
+    - name: Insert/Update "Match User" configuration block in /etc/ssh/sshd_config
+      ansible.builtin.blockinfile:
+        path: provision-stack/group_vars/hostsip
+        block: |
+         web01_ip: "{{web01_out.tagged_instances[0].id.private
+         -ip}}"
+         app01_ip "{{app01_out.tagged_instances[0].id.private
+         -ip}}"
+         rmq01_ip "{{rmq01_out.tagged_instances[0].id.private
+         -ip}}"
+         mc01_ip "{{mc01_out.tagged_instances[0].id.private
+         -ip}}"
+         db01_ip "{{db01_out.tagged_instances[0].id.private
+         -ip}}"
+        
+    - name: Copy login key to provision_stack directory 
+      copy:
+        src: loginkey_vpro.pem
+        dest: provision-stack/loginkey_vpro.pem
+        mode: '0400'    
+
+    - name: Insert/Update "Match User" configuration block in /etc/ssh/sshd_config
+      ansible.builtin.blockinfile:
+        path: provision-stack/group_vars/hostsip
+        block: |
+         web01 ansible_host="{{web01_out.tagged_instances[0].id.private
+         -ip}}"
+         app01 ansible_host="{{app01_out.tagged_instances[0].id.private
+         -ip}}"
+         rmq01 ansible_host="{{rmq01_out.tagged_instances[0].id.private
+         -ip}}"
+         mc01 ansible_host="{{mc01_out.tagged_instances[0].id.private
+         -ip}}"
+         db01 ansible_host="{{db01_out.tagged_instances[0].id.private
+         -ip}}"
+         cntl ansible_host-127.0.0.1 ansible_connection=local 
+
+         [websrvgrp]
+         web01
+         
+         [appsrvgrp]
+         app01
+
+         [rmqsrvgrp]
+         rmq01
+
+         [mcsrvgrp]
+         mc01
+
+         [dbsrvgrp]
+         db01
+
+         [control]
+         cntl 
+
+         [stack_inst.children]
+         websrvgrp
+         appsrvgrp
+         rmqsrvgrp
+         mcsrvgrp
+         dbsrvgrp
+
+         [stack_inst:vars]
+         ansible_user=ubuntu
+         ansible_ssh_private_key_file=loginkey_vpro.pem
+         #ansible_python_interpreter=/usr/bin/python3         
