--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -155,7 +155,7 @@
         region: "{{region}}"
         state: present
         instance_ids:
-          - "{{ web01_out.tagged_instances[0].id }}"
+          - "{{ web01_out.tags[0].id }}"
         purge_instance_ids: true
         security_group_ids: "{{ vproELBSG_out.group_id }}"
         subnets:
