--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -78,7 +78,7 @@
           Name: "web01"
           Project: Vprofile
           Owner: DevOps Team
-        count: 1
+        exact_count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: web01_out 
 
@@ -126,7 +126,7 @@
           Name: "rmq01"
           Project: Vprofile
           Owner: DevOps Team
-        count: 1
+        exact_count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: rmq01_out
 
