updated vpro yaml and created new directory

--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -94,7 +94,7 @@
           Name: "app01"
           Project: Vprofile
           Owner: DevOps Team
-        count: 1
+        exact_count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: app01_out 
 
@@ -142,7 +142,7 @@
           Name: "db01"
           Project: Vprofile
           Owner: DevOps Team
-        count: 1
+        exact_count: 1
         vpc_subnet_id: "{{privsub1id}}"
       register: db01_out
 
