--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -188,8 +188,8 @@
         dest: provision-stack/loginkey_vpro.pem
         mode: '0400'    
 
-    - name: Insert/Update "Match User" configuration block in /etc/ssh/sshd_config
-      ansible.builtin.blockinfile:
+    - name: Insert/Update Inventory file provision-stack/inventory-vpro
+      blockinfile:
         path: provision-stack/group_vars/hostsip
         block: |
          web01 ansible_host="{{web01_out.instances[0].instance_id.private
