--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -171,16 +171,12 @@
       blockinfile:
         path: provision-stack/group_vars/hostsip
         block: |
-         web01_ip: "{{web01_out.instances[0].instance_id.private
-         -ip}}"
-         app01_ip "{{app01_out.instances[0].instance_id.private
-         -ip}}"
-         rmq01_ip "{{rmq01_out.instances[0].instance_id.private
-         -ip}}"
-         mc01_ip "{{mc01_out.instances[0].instance_id.private
-         -ip}}"
-         db01_ip "{{db01_out.instances[0].instance_id.private
-         -ip}}"
+          web01_ip: "{{web01_out.instances[0].instance_id.private_ip}}"
+          app01_ip: "{{app01_out.instances[0].instance_id.private_ip}}"
+          rmq01_ip: "{{rmq01_out.instances[0].instance_id.private_ip}}"
+          mc01_ip: "{{mc01_out.instances[0].instance_id.private_ip}}"
+          db01_ip: "{{db01_out.instances[0].instance_id.private_ip}}"
+
         
     - name: Copy login key to provision_stack directory 
       copy:
